データ無しの時に表示されなくなったバグを修正

--- a/gomi/index.html
+++ b/gomi/index.html
@@ -15,8 +15,7 @@
 
 	<div class="container">
 	    <div class="row">
-	    	<div id="retSelectBox"></div>
-	    	<div id="retResultBox"></div>
+	    	<div id="results"></div>
 	    </div>
 	</div>
 
