ダッシュボードにアプリとモニターの URL を追加

--- a/dashbaord/static/index.html
+++ b/dashbaord/static/index.html
@@ -2,9 +2,15 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>クラッカー</title>
+    <title>ビギクラ!</title>
 </head>
 <body>
-  <h1>おてがるクラッキング</h1>
+  <h1>ビギクラ!</h1>
+  <div>
+    <a href="/bbs">攻撃対象アプリ</a>
+  </div>
+  <div>
+    <a href="/monitor">SQL モニター</a>
+  </div>
 </body>
 </html>
