--- a/gomi/index.html
+++ b/gomi/index.html
@@ -3,22 +3,21 @@
   <head>
     <meta charset="UTF-8"/>
     <title>結果表示</title>
-    <link href=./css/bootstrap.min.css rel=stylesheet />
-    <link href=./css/style.css rel=stylesheet />
+    <link href="./css/bootstrap.min.css" rel="stylesheet">
+    <link href="./css/style.css" "rel=stylesheet">
   </head>
   <body>
   	<div class="container">
 	  	<header>
 	    	<h1>結果表示</h1>
 	    </header>
-	</div>
+	  </div>
 
-	<div class="container">
+	  <div class="container">
 	    <div class="row">
 	    	<div id="results"></div>
 	    </div>
-	</div>
-
+	  </div>
 
     <script src="main.js"></script>
     <script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
