--- a/gomi/index.html
+++ b/gomi/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <title>結果表示</title>
     <link href="./css/bootstrap.min.css" rel="stylesheet">
-    <link href="./css/style.css" "rel=stylesheet">
+    <link href="./css/style.css" rel="stylesheet">
   </head>
   <body>
   	<div class="container">
