Bootstrap などを全体で共有するように

--- a/gomi/index.html
+++ b/gomi/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8"/>
     <title>結果表示</title>
-    <link href="./css/bootstrap.min.css" rel="stylesheet">
-    <link href="./css/style.css" rel="stylesheet">
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/style.css" rel="stylesheet">
   </head>
   <body>
   	<div class="container">
@@ -20,7 +20,7 @@
 	  </div>
 
     <script src="main.js"></script>
-    <script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
-    <script src="./js/bootstrap.js"></script>
+    <script src="/js/jquery-2.2.3.min.js"></script>
+    <script src="/js/bootstrap.js"></script>
   </body>
 </html>
