--- a/dashbaord/static/index.html
+++ b/dashbaord/static/index.html
@@ -29,7 +29,7 @@
       </div>
 
       <div class="col-md-4">
-        <h2>掲示板を起動</h2>
+        <h2>手順2 掲示板を起動</h2>
         <p>
           何の特徴もない会員制の掲示板です。ログイン ID に <code>admin</code> パスワードに <code>admin</code> でログインができます。
         </p>
@@ -42,7 +42,7 @@
       </div>
 
       <div class="col-md-4">
-        <h2>攻撃しよう!</h2>
+        <h2>手順3 攻撃しよう!</h2>
         <p>
           掲示板の機能を一通り試してら、今度は攻撃にチャレンジしてみましょう! 少し工夫をするだけで、admin のパスワードを知らなくてもログインできるかもしれません。他にもいろいな脆弱性がありますのでぜひ試してみてください!
         </p>
