issues #6 説明文の修正

--- a/dashbaord/static/index.html
+++ b/dashbaord/static/index.html
@@ -44,7 +44,7 @@
       <div class="col-md-4">
         <h2>手順3 攻撃しよう!</h2>
         <p>
-          掲示板の機能を一通り試してら、今度は攻撃にチャレンジしてみましょう! 少し工夫をするだけで、admin のパスワードを知らなくてもログインできるかもしれません。他にもいろいな脆弱性がありますのでぜひ試してみてください!
+          掲示板の機能を一通り試したら、今度は攻撃にチャレンジしてみましょう! 少し工夫をするだけで、admin のパスワードを知らなくてもログインできるかもしれません。他にもいろいな脆弱性がありますのでぜひ試してみてください!
         </p>
       </div>
 
