Fix #8 悪用しないよう警告を追加

--- a/dashbaord/static/index.html
+++ b/dashbaord/static/index.html
@@ -13,6 +13,14 @@
       <p>
         ビギクラ! は初心者向けの脆弱性学習アプリです。ビギクラ! は脆弱性のある掲示板アプリと、実行される SQL 文や実行結果を表示するモニターのセットです。実行される SQL 文を見ながら攻撃をしてみることで、誰でも簡単に攻撃を体験することができます。
       </p>
+      <div class="alert alert-danger" role="alert">
+        <p>
+          当アプリは脆弱性の仕組みを学び、より安全なアプリの開発ができるようにすることを目的としております。攻撃を推奨するものではありません。
+        </p>
+        <p>
+          絶対に、他のサイトに攻撃を仕掛けないでください。
+        </p>
+      </div>
     </div>
   </div>
 
