Fix #9 対応ブラウザーを書いた

--- a/dashbaord/static/index.html
+++ b/dashbaord/static/index.html
@@ -59,6 +59,12 @@
     </div>
   </div>
 
+  <div class="container" class="app-spec">
+    <h2>動作環境</h2>
+    <p>ビギクラ! はパソコン用の <a href="https://www.mozilla.org/ja/firefox/new/">Mozilla Firefox</a> と <a href="https://support.google.com/chrome/answer/95346?hl=ja">Google Chrome</a> で動作します。</p>
+    <p>Safari や IE では動作しませんのでご注意ください。</p>
+  </div>
+
   <script src="/js/jquery-2.2.3.min.js"></script>
   <script src="/js/bootstrap.js"></script>
 </body>
