--- a/gomi/index.html
+++ b/gomi/index.html
@@ -5,6 +5,7 @@
     <title>結果表示</title>
     <link href="/css/bootstrap.min.css" rel="stylesheet">
     <link href="/css/style.css" rel="stylesheet">
+    <link href="/css/default.css" rel="stylesheet">
   </head>
   <body>
   	<div class="container">
@@ -21,6 +22,7 @@
 
     <script src="main.js"></script>
     <script src="/js/jquery-2.2.3.min.js"></script>
+    <script src="/js/highlight.pack.js"></script>
     <script src="/js/bootstrap.js"></script>
   </body>
 </html>
