結果表示画面のsyntax highlightとcssを編集しました

--- a/gomi/index.html
+++ b/gomi/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8"/>
     <title>結果表示</title>
     <link href="/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/css/style.css" rel="stylesheet">
-    <link href="/css/default.css" rel="stylesheet">
+    <link href="/css/monitor.css" rel="stylesheet">
+    <link href="/css/vs.css" rel="stylesheet">
   </head>
   <body>
   	<div class="container">
 	  	<header>
 	    	<h1>結果表示</h1>
+	    	<div>login formへ入力した文字列に対するSQL文の結果を表示します</div>
 	    </header>
 	  </div>
 
@@ -24,5 +25,9 @@
     <script src="/js/jquery-2.2.3.min.js"></script>
     <script src="/js/highlight.pack.js"></script>
     <script src="/js/bootstrap.js"></script>
+    <script type='text/javascript' id="__bs_script__">//<![CDATA[
+      document.write("<script async src='http://HOST:3001/browser-sync/browser-sync-client.2.10.0.js'><\/script>".replace("HOST", location.hostname));
+//]]>
+    </script>
   </body>
 </html>
