モニタに表示される説明の修正

--- a/gomi/index.html
+++ b/gomi/index.html
@@ -11,7 +11,7 @@
   	<div class="container">
 	  	<header>
 	    	<h1>結果表示</h1>
-	    	<div>login formへ入力した文字列に対するSQL文の結果を表示します</div>
+	    	<div>アプリで実行された SQL 文とその実行結果が表示されます</div>
 	    </header>
 	  </div>
 
