--- a/dashbaord/static/index.html
+++ b/dashbaord/static/index.html
@@ -11,11 +11,11 @@
     <div class="container">
       <h1>ビギクラ!</h1>
       <p>
-        ビギクラ! は初心者向けの脆弱性学習アプリです。ビギクラ! は脆弱性のある掲示板アプリと、実行される SQL 文や実行結果を表示するモニターのセットです。実行される SQL 文を見ながら攻撃をしてみることで、誰でも簡単に攻撃を体験することができます。
+        ビギクラ! は初心者向けの脆弱性学習アプリです。ビギクラ! は脆弱性のある掲示板と、実行される SQL 文や実行結果を表示するモニターのセットです。実行される SQL 文を見ながら攻撃を試すことができます。
       </p>
       <div class="alert alert-danger" role="alert">
         <p>
-          当アプリは脆弱性の仕組みを学び、より安全なアプリの開発ができるようにすることを目的としております。攻撃を推奨するものではありません。
+          ビギクラ!はアプリ制作者が脆弱性の仕組みを学び、より安全なアプリの開発ができるようになることを目的としております。攻撃を推奨するものではありません。
         </p>
         <p>
           絶対に、他のサイトに攻撃を仕掛けないでください。
@@ -29,14 +29,14 @@
       <div class="col-md-4">
         <h2>手順1 掲示板を起動</h2>
         <p>
-          何の特徴もない会員制の掲示板です。ログイン ID に <code>admin</code> パスワードに <code>admin</code> でログインができます。
+          何の特徴もない会員制の掲示板です。ログイン ID に <code>admin</code> パスワードに <code>admin</code> でログインできます。
         </p>
         <p>
-          投稿をしてみて、掲示板アプリの機能を一通り試してみよう!
+          投稿して掲示板の機能を一通り試してみよう!
         </p>
         <p>
           <form action="/new" method="post" target="app">
-            <button type="submit" class="btn btn-primary">掲示板を起動 >></button>
+            <button type="submit" class="btn btn-primary">掲示板を起動する >></button>
           </form>
         </p>
       </div>
@@ -47,14 +47,17 @@
           掲示板の右上に<code>モニター</code>ボタンがあります。ここをクリックすると、モニターが表示されます。
         </p>
         <p>
-          モニターは、アプリで実行された SQL 文とその実行結果が表示されます。掲示板を操作しながらどのような SQL 文が実行されるか確認しましょう!
+          モニターには、掲示板で実行された SQL 文とその実行結果が表示されます。掲示板を操作しながらどのような SQL 文が実行されるか確認してみよう!
         </p>
       </div>
 
       <div class="col-md-4">
         <h2>手順3 攻撃しよう!</h2>
         <p>
-          掲示板の機能を一通り試したら、今度は攻撃にチャレンジしてみましょう! 少し工夫をするだけで、admin のパスワードを知らなくてもログインできるかもしれません。他にもいろいな脆弱性がありますのでぜひ試してみてください!
+          掲示板の機能を一通り試したら、今度は攻撃にチャレンジしてみよう! 少し工夫をするだけで、admin のパスワードを知らなくてもログインできるかもしれません。
+        </p>
+        <p>
+          他にもいろいろな脆弱性があるので試してみよう!
         </p>
       </div>
 
