topページの説明を書き換えました

--- a/dashbaord/static/index.html
+++ b/dashbaord/static/index.html
@@ -11,7 +11,9 @@
     <div class="container">
       <h1>ビギクラ!</h1>
       <p>
-        ビギクラ! は初心者向けの脆弱性学習アプリです。ビギクラ! は脆弱性のある掲示板と、実行される SQL 文や実行結果を表示するモニターのセットです。実行される SQL 文を見ながら攻撃を試すことができます。
+	ビギクラ!は脆弱性に興味を持って貰うためのeラーニングシステムです。
+	脆弱性のある掲示板とモニターのセットで、
+	実行されるSQL文とその結果を確認しながら攻撃を試すことができます。
       </p>
       <div class="alert alert-danger" role="alert">
         <p>
@@ -29,7 +31,7 @@
       <div class="col-md-4">
         <h2>手順1 掲示板を起動</h2>
         <p>
-          何の特徴もない会員制の掲示板です。ログイン ID に <code>admin</code> パスワードに <code>admin</code> でログインできます。
+          脆弱性をもった会員制の掲示板です。ログイン ID に <code>admin</code> パスワードに <code>admin</code> でログインできます。
         </p>
         <p>
           投稿して掲示板の機能を一通り試してみよう!
