長音符を省略しました

--- a/dashbaord/static/index.html
+++ b/dashbaord/static/index.html
@@ -12,7 +12,7 @@
       <h1>ビギクラ!</h1>
       <p>
 	ビギクラ!は脆弱性に興味を持って貰うためのeラーニングシステムです。
-	脆弱性のある掲示板とモニターのセットで、
+	脆弱性のある掲示板とモニタのセットで、
 	実行されるSQL文とその結果を確認しながら攻撃を試すことができます。
       </p>
       <div class="alert alert-danger" role="alert">
@@ -44,12 +44,12 @@
       </div>
 
       <div class="col-md-4">
-        <h2>手順2 モニターを起動</h2>
+        <h2>手順2 モニタを起動</h2>
         <p>
-          掲示板の右上に<code>モニター</code>ボタンがあります。ここをクリックすると、モニターが表示されます。
+          掲示板の右上に<code>モニタ</code>ボタンがあります。ここをクリックすると、モニタが表示されます。
         </p>
         <p>
-          モニターには、掲示板で実行された SQL 文とその実行結果が表示されます。掲示板を操作しながらどのような SQL 文が実行されるか確認してみよう!
+          モニタには、掲示板で実行された SQL 文とその実行結果が表示されます。掲示板を操作しながらどのような SQL 文が実行されるか確認してみよう!
         </p>
       </div>
 
